--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="shn.css">
+    <link rel="stylesheet" href="index.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
@@ -23,6 +23,6 @@
            
        </section>
    </main>
-   <script src="shn.js"></script> 
+   <script src="index.js"></script> 
 </body>
 </html>
